# clang-i18n

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.jp_JP.md  README.md  README.zh_CN.md  README.zh_TW.md  clang-i18n.cpp  collect.py  config.h.in  corpus.txt  translate.py  translate_batch_import.py
.github/workflows/: build.yml  release.yml
docs/: README.de_DE.md  README.es_ES.md  README.fr_FR.md  README.jp_JP.md  README.ko_KR.md  README.pt_BR.md  README.ru_RU.md  README.tr_TR.md  README.zh_CN.md  README.zh_TW.md
i18n/: de_DE.prompt  de_DE.yml  es_ES.prompt  es_ES.yml  fr_FR.prompt  fr_FR.yml  ja_JP.prompt  ja_JP.yml  ko_KR.prompt  ko_KR.yml  pt_BR.prompt  pt_BR.yml  ru_RU.prompt  ru_RU.yml  tr_TR.prompt  tr_TR.yml  zh_CN.errata  zh_CN.prompt  zh_CN.yml  zh_TW.errata  zh_TW.prompt  zh_TW.yml
scripts/: collect.py  coverage.py  diag_coverage.py  diag_preview.py  translate.py  translate_batch.py  zh_formatter.py
